--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -31,17 +31,17 @@ jobs:
 
       - name: Install dotrun
         run: sudo pip3 install dotrun requests==2.31.0
-
+          
       - name: Install dependencies
         run: |
           sudo chmod -R 777 .
-          dotrun install
+          dotrun --release 1.1.0-rc2 install
 
       - name: Build assets
-        run: dotrun build
+        run: dotrun --release 1.1.0-rc2 build
 
       - name: Test site
-        run: dotrun & curl --head --fail --retry-delay 1 --retry 30 --retry-connrefused http://localhost:8002
+        run: dotrun --release 1.1.0-rc2 serve & curl --head --fail --retry-delay 1 --retry 30 --retry-connrefused http://localhost:8002
 
   lint-scss:
     runs-on: ubuntu-22.04
